src/test/deca/context/valid/SansObjet/DeclVar-Plus-int-int-int.deca
// Description:
//    Declaration of a int variable using + operation between a int variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  17; 
    int y = 3; 
    int z = 17 + 3; 
}
