src/test/deca/context/invalid/SansObjet/DeclVar-Greater-string-string-int.deca
// Description:
//    Declaration of a string variable using > operation between a string variable and int .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    string x =  "World"; 
    int y = 17; 
    string z = "World" > 17; 
}
